--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
